--- a/Views/Common/header.ejs
+++ b/Views/Common/header.ejs
@@ -3,9 +3,9 @@
     <header>
         <div>
             <h1>
-                <a text-align="left" href="staff.ejs">Staff</a>
-                <a text-align="centre" href="skills.ejs">Skills</a>
-                <a text-align="right" href="profile.ejs">Profile</a>
+                <a text-align="left" href="Views/staff.ejs">Staff</a>
+                <a text-align="centre" href="Views\skills.ejs">Skills</a>
+                <a text-align="right" href="Views/profile.ejs">Profile</a>
             </h1>
         </div>
     </header>
