Setup, connection made.

--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -8,6 +8,6 @@
         <title>Home Page</title>
     </head>
     <body>
-        <button><a href="login.ejs">Login</a></button>
+        <h1>Home Page</h1>
     </body>
 </html>
