--- a/Views/Common/header.ejs
+++ b/Views/Common/header.ejs
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        body {background-color: rgb(47, 47, 47);}
+    </style>
     <header>
         <div>
             <h1>
