--- a/Views/employees.ejs
+++ b/Views/employees.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+    <%- include("common/header"); %>
     <head>
         <title>Staff</title>
     </head>
     <body>
         <h1>Staff</h1>
-        <tabel>
+        <table border="1">
             <header>
                 <th>ID</th>
                 <th>Name</th>
@@ -15,8 +16,13 @@
                 <th>Skills</th>
             </header>
             <tr>
-                <td>Something</td>
+                <td><%= employees[0] %></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
-        </tabel>
+        </table>
     </body>
 </html>
