--- a/Views/Common/header.ejs
+++ b/Views/Common/header.ejs
@@ -6,9 +6,9 @@
     <header>
         <div>
             <h1>
-                <a text-align="left" href="../employees.ejs">Employees</a>
-                <a text-align="centre" href="../skills.ejs">Skills</a>
-                <a text-align="right" href="../profile.ejs">Profile</a>
+                <a text-align="left" href="../employees">Employees</a>
+                <a text-align="centre" href="../skills">Skills</a>
+                <a text-align="right" href="../profile">Profile</a>
             </h1>
         </div>
     </header>
