--- a/Views/deleteEmployee.ejs
+++ b/Views/deleteEmployee.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Add Employee</title>
+        <title>Delete Employee</title>
     </head>
     <body>
-        <h1>Add Employee</h1>
+        <h1>Delete Employee</h1>
     </body>
 </html>
