--- a/Views/employees.ejs
+++ b/Views/employees.ejs
@@ -13,7 +13,7 @@
                 <th>FM</th>
                 <th>GG</th>
                 <th>Last update</th>
-                <th>Skills</th>
+                <th>Skills: Competency</th>
             </thead>
             <% employees.forEach(function(employee) { %>
             <tr>
@@ -22,9 +22,11 @@
                 <td><%= employee.FM %></td>
                 <td><%= employee.GG %></td>
                 <td><%= employee.Last_Update %></td>
-                <% employee.Skills.forEach(function(skill) { %> 
-                <td><%= skill %></td>
-                <% }); %>
+                <td>
+                    <% for (const [key, value] of Object.entries(employee.Skills)) { %>
+                    <%= key %>: <%= value %> |
+                    <% }; %>
+                </td>
             </tr>
             <% }); %>
         </table>
