Working, completed update

--- a/Views/Common/header.ejs
+++ b/Views/Common/header.ejs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <style>
-        body {background-color: rgb(47, 47, 47);}
+        body {
+            background-color: rgb(47, 47, 47);
+            color: white;
+        }
     </style>
     <header>
         <div>
