--- a/Views/editEmployee.ejs
+++ b/Views/editEmployee.ejs
@@ -5,7 +5,7 @@
         <%- include("common/header"); -%> 
     </head>
     <body>
-        <h1>Add Employee</h1>
+        <h1>Edit Employee</h1>
         <form method="post">
             Name: <input type="String" name="name" value="<%= employee.Name %>"/>
             <% if (errors["Name"]) { %>
