--- a/Views/skillsToEmployee.ejs
+++ b/Views/skillsToEmployee.ejs
@@ -15,11 +15,9 @@
             <tr>
                 <td><%= skill.Name %></td>
                 <td><%= skill.Description %></td>
-                <td><a href="/editSkill/<%= skill._id %>"><button>Edit</button></a></td>
-                <td><a href="/skills/delete/<%= skill._id %>"><button>Delete</button></a></td>
+                <td><a href="/addCompetency/<%= employeeId %>/<%= skill._id %>"><button>Add</button></a></td>
             </tr>
             <% }); %>
         </table>
-        <a href="addSkill"><button>Add new skill</button></a>
     </body>
 </html>
