--- a/Views/skills.ejs
+++ b/Views/skills.ejs
@@ -20,6 +20,6 @@
             </tr>
             <% }); %>
         </table>
-        <a href="addSkill"><button>Add new skill</button></a>
+        <a href="/addSkill"><button>Add new skill</button></a>
     </body>
 </html>
